--- a/Vagrant/Vagrantfile
+++ b/Vagrant/Vagrantfile
@@ -20,10 +20,8 @@ SCRIPT
 # Vagrantfile API/syntax version. Don't touch unless you know what you're doing!
 VAGRANTFILE_API_VERSION = "2"
 boxes = [
-  { :name => 'dse-cass1', :hadoop => '0', :solr => '0', :spark => '0', :cfs => '0', :ip => '192.168.183.10', :seeds => '192.168.183.10,192.168.183.12', :dc => 'DC1', :rack => 'rack1', :cpus =>2, :memory => 1024},
-  { :name => 'dse-cass2', :hadoop => '0', :solr => '0', :spark => '0', :cfs => '0', :ip => '192.168.183.11', :seeds => '192.168.183.10,192.168.183.12', :dc => 'DC1', :rack => 'rack2', :cpus =>2, :memory => 1024},
-  { :name => 'dse-cass3', :hadoop => '0', :solr => '0', :spark => '0', :cfs => '0', :ip => '192.168.183.12', :seeds => '192.168.183.10,192.168.183.12', :dc => 'DC2', :rack => 'rack1', :cpus =>2, :memory => 1024},
-  { :name => 'dse-cass4', :hadoop => '0', :solr => '0', :spark => '0', :cfs => '0', :ip => '192.168.183.13', :seeds => '192.168.183.10,192.168.183.12', :dc => 'DC2', :rack => 'rack2', :cpus =>2, :memory => 1024}
+  { :name => 'dse-cass1', :hadoop => '0', :solr => '0', :spark => '0', :cfs => '0', :ip => '192.168.183.10', :seeds => '192.168.183.10,192.168.183.11', :dc => 'DC1', :rack => 'rack1', :cpus =>2, :memory => 2048 },
+  { :name => 'dse-cass2', :hadoop => '0', :solr => '0', :spark => '0', :cfs => '0', :ip => '192.168.183.11', :seeds => '192.168.183.10,192.168.183.11', :dc => 'DC2', :rack => 'rack1', :cpus =>2, :memory => 2048 }
 ]
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   
@@ -43,7 +41,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
       config.vm.provision :shell, :inline => repo_cred_script
       config.vm.provision :shell, :path => "config/repo.sh" 
       
-      #Install rmate to connect to TextMate on host MacBook for text editing
+      #Install rmate to connect to TextMate on host MacBook for text editing as I am lazy 
       config.vm.provision :shell, :inline => "sudo gem install rmate"
       config.vm.provision :shell, :inline => "sudo echo 'export RMATE_HOST=192.168.183.1' >> /etc/profile"
       
@@ -55,15 +53,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
       config.vm.provision :shell, :inline => "cp -fv /vagrant/config/hosts /etc/hosts"
       config.vm.provision :shell, :inline => "echo '#{val[:name]}' > /etc/hostname"
       config.vm.provision :shell, :inline => "sudo hostname #{val[:name]}"
-      
-      config.vm.provision :shell, :inline => "sudo apt-get install squid-deb-proxy-client avahi-utils unzip -y"
-      config.vm.provision :shell, :inline => "sudo apt-get install python-software-properties -y"
-      
-      #Install Git
-      config.vm.provision :shell, :inline => "sudo apt-get install git -y"
-      
-      #Install GO Lang
-      config.vm.provision :shell, :inline => "sudo apt-get install golang -y"
+            
+      config.vm.provision :shell, :inline => "sudo apt-get install avahi-utils unzip vim curl zip python-software-properties python-pip go-lang git -y"
+
       config.vm.provision :shell, :inline => "sudo echo 'export GOPATH=/usr/share/go/' >> /etc/profile"
       config.vm.provision :shell, :inline => "sudo echo 'export PATH=$PATH:$GOPATH/bin' >> /etc/profile"
       
@@ -82,7 +74,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
       config.vm.provision :shell, :inline => "sed -i 's/# num_tokens: 256/num_tokens: 256/' /etc/dse/cassandra/cassandra.yaml"
       
       #config.vm.provision :shell, :inline => "sed -i 's/initial_token:.*$/initial_token: #{val[:token]}/' /etc/dse/cassandra/cassandra.yaml"
-      config.vm.provision :shell, :inline => "sed -i 's/cluster_name:.*$/cluster_name: dse-cassandra/' /etc/dse/cassandra/cassandra.yaml"
+      config.vm.provision :shell, :inline => "sed -i 's/cluster_name:.*$/cluster_name: dse-cass/' /etc/dse/cassandra/cassandra.yaml"
       config.vm.provision :shell, :inline => "sed -i 's/listen_address:.*$/listen_address: #{val[:ip]}/' /etc/dse/cassandra/cassandra.yaml"
       config.vm.provision :shell, :inline => "sed -i 's/rpc_address:.*$/rpc_address: #{val[:ip]}/' /etc/dse/cassandra/cassandra.yaml"
       config.vm.provision :shell, :inline => "sed -i 's/seeds:.*$/seeds: \"#{val[:seeds]}\"/' /etc/dse/cassandra/cassandra.yaml"      
@@ -101,7 +93,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
       config.vm.provision :shell, :inline => "sed -i 's/SPARK_ENABLED=.*$/SPARK_ENABLED=#{val[:spark]}/' /etc/default/dse"
       config.vm.provision :shell, :inline => "sed -i 's/CFS_ENABLED=.*$/CFS_ENABLED=#{val[:cfs]}/' /etc/default/dse"
         
-      config.vm.provision :shell, :inline => "service dse restart"       
+      config.vm.provision :shell, :inline => "sudo service dse restart"       
       
 
     end
