--- a/Vagrant/dse/Vagrantfile
+++ b/Vagrant/dse/Vagrantfile
@@ -1,6 +1,7 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
+DEB_CACHE_IP = "10.211.54.100"  # private IP address
 
 env_var_cmd = ""
 if ENV['datastax_repo_username']
@@ -19,13 +20,18 @@ SCRIPT
 
 # Vagrantfile API/syntax version. Don't touch unless you know what you're doing!
 VAGRANTFILE_API_VERSION = "2"
+#boxes = [
+#  { :name => 'dse-cass1', :hadoop => '0', :solr => '0', :spark => '0', :cfs => '0', :ip => '10.211.56.110', :seeds => '10.211.56.110,10.211.56.111', :dc => 'DC1', :rack => 'rack1', :cpus =>2, :memory => 2048 },
+#  { :name => 'dse-cass2', :hadoop => '0', :solr => '0', :spark => '0', :cfs => '0', :ip => '10.211.56.111', :seeds => '10.211.56.110,10.211.56.111', :dc => 'DC2', :rack => 'rack1', :cpus =>2, :memory => 2048 },
+#  { :name => 'dse-cass3', :hadoop => '0', :solr => '0', :spark => '0', :cfs => '0', :ip => '10.211.56.112', :seeds => '10.211.56.110,10.211.56.111', :dc => 'DC1', :rack => 'rack2', :cpus =>2, :memory => 2048 },
+#  { :name => 'dse-cass4', :hadoop => '0', :solr => '0', :spark => '0', :cfs => '0', :ip => '10.211.56.113', :seeds => '10.211.56.110,10.211.56.111', :dc => 'DC2', :rack => 'rack3', :cpus =>2, :memory => 2048 }
+#]
 boxes = [
-  { :name => 'dse-cass1', :hadoop => '0', :solr => '0', :spark => '0', :cfs => '0', :ip => '192.168.183.10', :seeds => '192.168.183.10,192.168.183.11', :dc => 'DC1', :rack => 'rack1', :cpus =>2, :memory => 2048 },
-  { :name => 'dse-cass2', :hadoop => '0', :solr => '0', :spark => '0', :cfs => '0', :ip => '192.168.183.11', :seeds => '192.168.183.10,192.168.183.11', :dc => 'DC2', :rack => 'rack1', :cpus =>2, :memory => 2048 }
+  { :name => 'dse-cass1', :hadoop => '0', :solr => '0', :spark => '0', :cfs => '0', :ip => '10.211.56.110', :seeds => '10.211.56.110,10.211.56.111', :dc => 'DC1', :rack => 'rack1', :cpus =>2, :memory => 2048 }
 ]
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   
-  config.vm.box = "ubuntu/trusty64"
+  config.vm.box = "hashicorp/precise64"
   
   config.ssh.shell = "bash -c 'BASH_ENV=/etc/profile exec bash'"
   boxes.each do |val|
@@ -35,6 +41,10 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         v.customize ["modifyvm", :id, "--memory", val[:memory]]
         v.customize ["modifyvm", :id, "--cpus", val[:cpus] ]
         
+      config.vm.provision :shell, :inline => "sudo apt-get install squid-deb-proxy-client -y"  
+      config.vm.provision :shell, :inline => "echo 'Acquire::http::Proxy \"http://#{DEB_CACHE_IP}:8000/\";' | sudo tee /etc/apt/apt.conf.d/30autoproxy"  
+        
+        
       config.vm.provision :shell, :inline => "sudo apt-get update"
       config.vm.provision :shell, :inline => "sudo apt-get upgrade -y"         
       
@@ -43,7 +53,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
       
       #Install rmate to connect to TextMate on host MacBook for text editing as I am lazy 
       config.vm.provision :shell, :inline => "sudo gem install rmate"
-      config.vm.provision :shell, :inline => "sudo echo 'export RMATE_HOST=192.168.183.1' >> /etc/profile"
+      config.vm.provision :shell, :inline => "sudo echo 'export RMATE_HOST=10.211.56.1' >> /etc/profile"
       
       #Allow root login
       config.vm.provision :shell, :inline => "sudo sed -i 's/PermitRootLogin.*$/PermitRootLogin yes/' /etc/ssh/sshd_config"
@@ -54,14 +64,6 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
       config.vm.provision :shell, :inline => "echo '#{val[:name]}' > /etc/hostname"
       config.vm.provision :shell, :inline => "sudo hostname #{val[:name]}"
             
-      config.vm.provision :shell, :inline => "sudo apt-get install avahi-utils unzip vim curl zip python-software-properties python-pip go-lang git -y"
-
-      config.vm.provision :shell, :inline => "sudo echo 'export GOPATH=/usr/share/go/' >> /etc/profile"
-      config.vm.provision :shell, :inline => "sudo echo 'export PATH=$PATH:$GOPATH/bin' >> /etc/profile"
-      
-      #PC Stat
-      config.vm.provision :shell, :inline => "go get github.com/tobert/pcstat"
-      
       config.vm.provision :shell, :path => "config/misc.sh"    
       config.vm.provision :shell, :path => "config/java.sh"
       config.vm.provision :shell, :path => "config/dse.sh"  
