--- a/Vagrant/dse/Vagrantfile
+++ b/Vagrant/dse/Vagrantfile
@@ -20,15 +20,15 @@ SCRIPT
 
 # Vagrantfile API/syntax version. Don't touch unless you know what you're doing!
 VAGRANTFILE_API_VERSION = "2"
-boxes = [
-  { :name => 'dse-cass1', :hadoop => '0', :solr => '0', :spark => '0', :cfs => '0', :ip => '10.211.56.110', :seeds => '10.211.56.110,10.211.56.111', :dc => 'DC1', :rack => 'rack1', :cpus =>2, :memory => 2048 },
-  { :name => 'dse-cass2', :hadoop => '0', :solr => '0', :spark => '0', :cfs => '0', :ip => '10.211.56.111', :seeds => '10.211.56.110,10.211.56.111', :dc => 'DC2', :rack => 'rack1', :cpus =>2, :memory => 2048 },
-  { :name => 'dse-cass3', :hadoop => '0', :solr => '0', :spark => '0', :cfs => '0', :ip => '10.211.56.112', :seeds => '10.211.56.110,10.211.56.111', :dc => 'DC1', :rack => 'rack2', :cpus =>2, :memory => 2048 },
-  { :name => 'dse-cass4', :hadoop => '0', :solr => '0', :spark => '0', :cfs => '0', :ip => '10.211.56.113', :seeds => '10.211.56.110,10.211.56.111', :dc => 'DC2', :rack => 'rack3', :cpus =>2, :memory => 2048 }
-]
 #boxes = [
-#  { :name => 'dse-cass1', :hadoop => '0', :solr => '0', :spark => '0', :cfs => '0', :ip => '10.211.56.110', :seeds => '10.211.56.110,10.211.56.111', :dc => 'DC1', :rack => 'rack1', :cpus =>2, :memory => 2048 }
+#  { :name => 'dse-cass1', :hadoop => '0', :solr => '0', :spark => '0', :cfs => '0', :ip => '10.211.56.110', :seeds => '10.211.56.110,10.211.56.111', :dc => 'DC1', :rack => 'rack1', :cpus =>2, :memory => 2048 },
+#  { :name => 'dse-cass2', :hadoop => '0', :solr => '0', :spark => '0', :cfs => '0', :ip => '10.211.56.111', :seeds => '10.211.56.110,10.211.56.111', :dc => 'DC2', :rack => 'rack1', :cpus =>2, :memory => 2048 },
+#  { :name => 'dse-cass3', :hadoop => '0', :solr => '0', :spark => '0', :cfs => '0', :ip => '10.211.56.112', :seeds => '10.211.56.110,10.211.56.111', :dc => 'DC1', :rack => 'rack2', :cpus =>2, :memory => 2048 },
+#  { :name => 'dse-cass4', :hadoop => '0', :solr => '0', :spark => '0', :cfs => '0', :ip => '10.211.56.113', :seeds => '10.211.56.110,10.211.56.111', :dc => 'DC2', :rack => 'rack3', :cpus =>2, :memory => 2048 }
 #]
+boxes = [
+  { :name => 'dse-cass1', :hadoop => '0', :solr => '0', :spark => '0', :cfs => '0', :ip => '10.211.56.110', :seeds => '10.211.56.110,10.211.56.111', :dc => 'DC1', :rack => 'rack1', :cpus =>2, :memory => 2048 }
+]
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   
   config.vm.box = "ubuntu/trusty64"
@@ -46,10 +46,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
       config.vm.provision :shell, :inline => "sudo echo 'Acquire::http::Proxy::ppa.launchpad.net DIRECT;' >> /etc/apt/apt.conf.d/30proxy" 
       config.vm.provision :shell, :inline => "sudo echo 'Acquire::http::Proxy::debian.datastax.com DIRECT;' >> /etc/apt/apt.conf.d/30proxy" 
       config.vm.provision :shell, :inline => "sudo echo 'Acquire::http::Proxy::download.oracle.com DIRECT;' >> /etc/apt/apt.conf.d/30proxy"  
-       
-      
-        
-        
+         
       config.vm.provision :shell, :inline => "sudo apt-get update"
       config.vm.provision :shell, :inline => "sudo apt-get upgrade -y"         
       
@@ -94,16 +91,33 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
       config.vm.provision :shell, :inline => "sed -i 's/dc=.*$/dc=#{val[:dc]}/' /etc/dse/cassandra/cassandra-rackdc.properties"
       config.vm.provision :shell, :inline => "sed -i 's/rack=.*$/rack=#{val[:rack]}/' /etc/dse/cassandra/cassandra-rackdc.properties"
       
+      #Enable Authentication
+      config.vm.provision :shell, :inline => "sed -i 's/authenticator: AllowAllAuthenticator/authenticator: PasswordAuthenticator/' /etc/dse/cassandra/cassandra.yaml"
+      config.vm.provision :shell, :inline => "sed -i 's/authorizer: AllowAllAuthorizer/authorizer: CassandraAuthorizer/' /etc/dse/cassandra/cassandra.yaml"
+      config.vm.provision :shell, :inline => "sudo echo \"ALTER KEYSPACE system_auth WITH REPLICATION = {'class' : 'NetworkTopologyStrategy', 'DC1' : 2, 'DC2' : 2};\" >> /tmp/post_install.cql"
+      config.vm.provision :shell, :inline => "sudo echo \"CREATE USER app WITH PASSWORD 'app' NOSUPERUSER;\" >> /tmp/post_install.cql"
+      config.vm.provision :shell, :inline => "sudo echo \"CREATE KEYSPACE IF NOT EXISTS app WITH REPLICATION = {'class' : 'NetworkTopologyStrategy', 'DC1' : 1, 'DC2' : 1};\" >> /tmp/post_install.cql"
+      config.vm.provision :shell, :inline => "sudo echo \"GRANT ALL ON KEYSPACE app TO app\" >> /tmp/post_install.cql"   
+      
       #Double check defaulst are not set for extea-DSE features
       config.vm.provision :shell, :inline => "sed -i 's/HADOOP_ENABLED=.*$/HADOOP_ENABLED=#{val[:hadoop]}/' /etc/default/dse"
       config.vm.provision :shell, :inline => "sed -i 's/SOLR_ENABLED=.*$/SOLR_ENABLED=#{val[:solr]}/' /etc/default/dse"
       config.vm.provision :shell, :inline => "sed -i 's/SPARK_ENABLED=.*$/SPARK_ENABLED=#{val[:spark]}/' /etc/default/dse"
       config.vm.provision :shell, :inline => "sed -i 's/CFS_ENABLED=.*$/CFS_ENABLED=#{val[:cfs]}/' /etc/default/dse"
         
-      config.vm.provision :shell, :inline => "sudo service dse restart"       
+      config.vm.provision :shell, :inline => "sudo service dse restart"    
+            
+      config.vm.provision :shell, :inline => "sudo mkdir -p ~/.cassandra/"        
+      config.vm.provision :shell, :inline => "sudo echo \"[authentication]\" >> ~/.cassandra/cqlshrc"    
+      config.vm.provision :shell, :inline => "sudo echo \"username = cassandra\" >> ~/.cassandra/cqlshrc"
+      config.vm.provision :shell, :inline => "sudo echo \"password = cassandra\" >> ~/.cassandra/cqlshrc"   
+      config.vm.provision :shell, :inline => "sudo echo \"[connection]\" >> ~/.cassandra/cqlshrc"
+      config.vm.provision :shell, :inline => "sudo echo \"hostname = #{val[:name]}\" >> ~/.cassandra/cqlshrc"
+      config.vm.provision :shell, :inline => "sudo echo \"port = 9160\" >> ~/.cassandra/cqlshrc"    
       
-
-    end
+      #config.vm.provision :shell, :inline => "sudo cqlsh -f /tmp/post_install.cql"
+ 
+     end
   end
 end
 
