--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,14 @@
 		<metrics.version>3.1.0</metrics.version>
 		<metrics-graphite.version>3.0.2</metrics-graphite.version>
 		<quartz.version>2.2.1</quartz.version>
+		<commons-cli.version>1.2</commons-cli.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>${commons-cli.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
