Updating readme for new CLI args

--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,8 @@
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
+				    <finalName>cassandra-probe-exec</finalName>
+        			<appendAssemblyId>false</appendAssemblyId>
 				</configuration>
 			</plugin>
 		</plugins>
