--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,3 +5,5 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS}  [%t] %-5p %c{1}:%L - %m%n
 
+
+log4j.logger.com.datastax.driver=DEBUG
